--- a/serafina/package.json
+++ b/serafina/package.json
@@ -5,14 +5,42 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc -p .",
-    "test": "echo \"No tests\" && exit 0"
+    "dev": "ts-node --esm src/index.ts",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write \"**/*.{ts,js,json,md}\"",
+    "type-check": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "discord.js": "^14.15.1",
-    "cron": "^3.1.0"
+    "cron": "^3.1.0",
+    "discord.js": "^14.15.1"
   },
   "devDependencies": {
+    "@types/node": "^20.11.17",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "@vitest/coverage-v8": "^1.2.2",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.0",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.0",
-    "@types/node": "^20.11.17"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^1.2.2"
+  },
+  "lint-staged": {
+    "**/*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "**/*.{js,json,md}": [
+      "prettier --write"
+    ]
   }
 }
